# pdf_work

./: Cargo.toml  README.md
dev_project/: Cargo.toml
dev_project/source_mds/: file_02.md  untitled.md  untitled.txt
dev_project/src/: lib.rs  main.rs
pdf_ok/: Cargo.toml  build.rs  rustfmt.toml
pdf_ok/source_files/: 404.md
pdf_ok/src/: lib.rs  main.rs  utils.rs
pdf_ok/src/utils/: generate_pdf.rs  parse_yaml_hash.rs  read_file_data.rs  sources_files.rs
