[package]
name = "dev_project"
description = "Simple project to act as a test project to call PDF work done in a workspace project dependency."
version = "0.1.0"
edition = "2021"
homepage.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
dotenvy = "0.15.7"
pdf_composer = { version = "0.2.1", path = "../../pdf_composer" }
