[package]
name = "pdf_ok"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
dotenvy = "0.15.7"
headless_chrome = "1.0.9"
markdown = "0.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
url-escape = "0.1.1"
